# circom-compat-ffi

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  default.nix  flake.nix
.github/workflows/: ci.yml
src/: ffi.rs  ffi_types.rs  lib.rs
