[package]
name = "circom-compat-ffi"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3               # Use slightly better optimizations.
debug = true                # Generate debug info.
debug-assertions = true     # Enable debug assertions.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [
  "staticlib", # Ensure it gets compiled as a (static) C library
  # "cdylib",     # If you want a shared/dynamic C library (advanced)
  "lib", # For downstream Rust dependents: `examples/`, `tests/` etc.
]

[dependencies]

ark-circom = { git = "https://github.com/codex-storage/circom-compat.git#71f1ceb11aef27256", features = ["circom-2", "ethereum"]}

ark-crypto-primitives = { version = "=0.4.0" }
ark-ec = { version = "=0.4.1", default-features = false, features = ["parallel"] }
ark-ff = { version = "=0.4.1", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "=0.4.0" }
ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-poly = { version = "=0.4.1", default-features = false, features = ["parallel"] }
ark-relations = { version = "=0.4.0", default-features = false }
ark-serialize = { version = "=0.4.1", default-features = false }
ruint = { version = "1.7.0", features = ["serde", "num-bigint", "ark-ff"] }
num-bigint = "0.4.3"
